<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="15dp"
    android:paddingTop="20dp"
    android:paddingEnd="15dp"
    tools:context=".register.RegisterActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <View
                android:id="@+id/topLeft"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:background="@drawable/doble"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_back_to_login"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivregis"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/iv1"
                android:src="@drawable/logosd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back_to_login" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivregis" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UsernameEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/username"
                app:boxStrokeColor="@color/maron"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/maron"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/maron"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivregis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:inputType="textPersonName"
                    android:paddingStart="48dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/maron"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/NimEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/nim_label" app:boxStrokeColor="@color/maron"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/maron"
                app:startIconDrawable="@drawable/baseline_school_24" app:startIconTint="@color/maron"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UsernameEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nim"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:inputType="number"
                    android:paddingStart="48dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/maron"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/maron"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/maron"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/maron"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NimEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="58dp" android:fontFamily="@font/poppins_semi_bold"
                    android:inputType="textEmailAddress"
                    android:paddingStart="48dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/maron"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PasswordEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/maron"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/maron"
                app:errorEnabled="true"
                app:hintTextColor="@color/maron"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:startIconTint="@color/maron"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:inputType="textPassword"
                    android:paddingStart="48dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/maron"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="324dp"
                android:layout_height="44dp"
                android:layout_marginTop="30dp"
                android:alpha="1"
                android:background="@drawable/background_button"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:translationZ="0dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PasswordEditTextLayout"
                tools:alpha="500" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>